--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@ layout: compress
         <br><span class="underlined">Meets:</span>&nbsp; Weds 3-4:45pm in ATLS 229
         <br><span class="underlined">Instructor:</span>&nbsp; Arielle Hein</p>
 
-        <p><a href="">Office Hours</a></p>
+        <!-- <p><a href="">Office Hours</a></p> -->
         <!-- <a href="{{site.baseurl}}/contact/">Contact</a> -->
     </div>
     <br>
