adding calendar link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,9 @@ layout: compress
     <div class="links">
         <p><span class="underlined">Course:</span>&nbsp; ATLS 4519
         <br><span class="underlined">Meets:</span>&nbsp; Weds 3-4:45pm in ATLS 229
-        <br><span class="underlined">Instructor:</span>&nbsp; Arielle Hein</p>
+        <br><span class="underlined">Instructor:</span>&nbsp; Arielle Hein
+        <br><span class="underlined"><a href="https://calendar.google.com/calendar/selfsched?sstoken=UUdLc0ZFRlNQWkYyfGRlZmF1bHR8M2ExNGRiNzQ3ZTk1NWE3NDQzMmFjZTZjNWQxYzRlMTA">Appointment Signup</a></span>
+        </p>
 
         <!-- <p><a href="">Office Hours</a></p> -->
         <!-- <a href="{{site.baseurl}}/contact/">Contact</a> -->
